--- a/task5/report/zprava.tex
+++ b/task5/report/zprava.tex
@@ -366,16 +366,14 @@ Naopak součásti většiny standartních řešičů SAT, které jsou založeny 
 Náhodně vygenerováné testovací problémy z datasetu D2 by bylo třeba otestovat na nějakém SAT řešiči, zdali se v tomto datasetu tento jev vůbec vyskuje, neboť to je teoretický předpoklad. Dále by bylo nutné závislost genetického algoritmu na poměru mnohem více prozkoumat, aby jí bylo možné s jistoutou například vyvrátit. Tento experiment můžu vzít jako směr, který by bylo nutné dále a důkladně prozkoumat.
 
 \section{Závěr}\label{kap:zaver}
-Během experimentu jsem prozkoumal pokročilou iterativní heuristiku - simulované ochlazování. Ověřil a prozkoumal jsem závislosti této heuristiky na řídících parametrech. Parametry jsou určitě závislé na daných problémech či paramentech instancí, což je patrné i ze vzorců, kde přímo vystupuje rozdíl cen řešení. Tyto rozdíly se mohou pohybovat v různých intervalech a tomu je potřeba parametry také upravit, tedy hýbat s počáteční teplotou, která ve vzorci vystupuje jako druhý parametr. 
+Během experimentu jsem využil pokročilou iterativní heuristiku k řešení problému vážené splnitelnosti problému SAT. Jako pokročilou iterativní heuristiku k tomuto problému jsem zvolil genetický algoritmus. Při testu jsem si vytvořil některé předpoklady o parametrech a ty jsem se pokusil potvrdit experimenty. Testoval jsem vždy velký rozsah hodnot, abych prozkoumal chování heuristiky na tyto parametry. 
 
-Simulované ochlazování je randomizovaná heuristika sloužící k prochazení prostoru, a proto může při špatném nastavení mít tendenci uváznutí v lokálních extrémech. Heuristika kombinuje přístup diverzifikace na záčatku, a následující intenzifikace je snaha o nalezení optimálního řešení. 
+Pro řešení problému jsem se pokusil nalézt některé parametry, které se mohou blížit optimu na mnou zvolených problémech. Nejvíce se parametry musejí měnit v závislosti na velikosti instance, kde malé populace a malý počet generací mohou zbůsobit nedostatečnou iterativní sílu heuristiky. Dále mohou mít jiný optimální bod v případě mutace. Na druhou stranu operátor křížení a selekce lze nastavit docela univerzálně a u operátoru selekce především pokud je zvolena zvyšující se míra selekce. 
 
-Ze závislostí zjištěných během experimentu je vidět, že počáteční teplota je důležitý parametr v závislosti na hodnotách ceny řešení. Pokud se ceny řešení pohybují ve velkých hodnotách bude mou snahou nastavit vyšší teploty, než pokud se budou pohybovat na nějakém intervalu a budou například normalizované. 
+Při nastavování algoritmu mohou nejvíce pomoc grafy vývoje populace, protože na nich je možné vidět některé nemoci, které může algoritmus mít, například příliž rychlou konvergenci nebo úplnou divergenci populace. U problému SATu nebylo tak optížné udržet diverzifikouvanou populaci, ale i tak se jednotlivá řešení mohla pohybovat pouze okolo některého lokálního minima, do kterého algoritmus zkonvergoval. 
 
-Parametr ochlazování je důležitý k dostatečému na vzorkování rozsahu teploty a tedy i dostatečném počtu kroků v jednotlivých fázích a to především ve fázi intenzifikace. 
+Genetický algoritmus je randomizovaný algoritmus na principu Monte Carlo metod. Tedy stanovený počet kroků, které proběhnou, i když se nemusí podařit najít optimum. Ovšem není nutné, aby byl vždy algoritmus implementován na konečný počet cyklů, ale například na nějaký počet generací, které proběhnou po nalezení řešení v případě tohoto problému. Dále jde algoritmus vylepšit například paralelizací, kde mohou být simulovány populace na různých ostrovech, které si jen občas vymění nějakou genetickou informaci (jedince). Nebo například restart při příliž rychlé konvergenci a nedosažení požadovaného zlepšení.
 
-Jednotlivé počty kroků na dané teplotě nám naopak dovolí prozkoumat dané okolí, ale tento parametr nemá lineární závislost na chybě, ale je dán nepřímou uměrou a volíme tak mezi relativní chybou a časovou náročností. 
-
-Časová náročnost algortitmu je daná nastavenými parametry a s konkrétními parametry provede algoritmus vždy stejný počet kroků, tedy pro mou implementaci tohoto přístupu. Simulované ochlazování je možné například implementovat s proměným počtem kroků na jedné teplotě, který může být opět řízen nějakou jednoduchou heuristikou.
+Myslím si, že tato iterativní heuristika má velikou sílu a problém se podařilo docela obstojně řešit. Samozřejmě velice záleží na nastavených parametrech, které ovšem byly v rámci připravených datových sad D1 a D2 popsaných v kapitole \ref{kap:data}, nalezeny a řešení testováno.
 
 \end{document}
